fix aligning of sidebar for single theme review and empty theme queue pages (bug 857072)

--- a/media/css/devreg/themes_review.styl
+++ b/media/css/devreg/themes_review.styl
@@ -55,8 +55,14 @@ nav.theme-review {
             margin-bottom: 0;
         }
     }
-    .sidebar-fixed {
+    .fixed {
         position: fixed;
+    }
+    .absolute {
+        position: absolute;
+        &.align {
+            top: 55px;
+        }
     }
     .options, .shortcuts {
         background: #fff;
